<resources>
    <string name="app_name">NUMAD21Fa_KristineUmeh</string>
    <string name="trying_back_button">Trying out the back button!</string>
    <string name="hello_world_this_is_my_first_mobile_app">Hello World! This is my first Mobile App!</string>
    <string name="about">ABOUT</string>
    <string name="more">MORE…</string>
    <string name="clicky">CLICKY CLICKY</string>
    <string name="letter_a">A</string>
    <string name="letter_b">B</string>
    <string name="letter_c">C</string>
    <string name="letter_d">D</string>
    <string name="letter_e">E</string>
    <string name="letter_f">F</string>
    <string name="pressed">Pressed: -</string>
    <string name="clickA">Pressed: A</string>
    <string name="clickB">Pressed: B</string>
    <string name="clickC">Pressed: C</string>
    <string name="clickD">Pressed: D</string>
    <string name="clickE">Pressed: E</string>
    <string name="clickF">Pressed: F</string>
    <string name="linkCollector">LINK COLLECTOR</string>
    <string name="linkCollectorPage">LINK COLLECTOR PAGE</string>
    <string name="addLink">Add Link</string>
    <string name="linkName">link name</string>
    <string name="name">Name</string>
    <string name="links">Links</string>
    <string name="addNewLink">Add New Link</string>
    <string name="linkUrl">link url</string>
    <string name="url">url</string>
    <string name="location">Location</string>
    <string name="get_location">Get Location</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="search">search</string>
    <string name="enter_a_city">Enter a City</string>
    <string name="weather_forecast">Weather Forecast</string>
    <string name="weather_page">Weather Page</string>

</resources>