<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/weather"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/weatherbackground"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".WeatherService">

  <TextView
      android:id="@+id/get_forecast"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/ic_launcher_nu_background"
      android:gravity="center"
      android:text="@string/weather_forecast"
      android:textColor="@color/white"
      android:textSize="40sp" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:orientation="vertical">

    <EditText
        android:id="@+id/city_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/enter_a_city"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/black"
        android:text="@string/search"
        android:textSize="24sp"
        android:textColor="@color/white"
        app:background="@null"
        android:onClick="getWeatherDetails"/>

    <TextView
        android:id="@+id/weatherDisplay"
        android:layout_width="match_parent"
        android:layout_height="138dp"
        android:textSize="34sp"
        android:gravity="center_horizontal"
        android:textColor="@color/black"/>

  </LinearLayout>

</LinearLayout>
